@@ -49,7 +49,7 @@ generate_keypair <- function()
 pwhash <- function(password)
 {
   if (!is.null(password))
-    getPass::pw_hash(password)
+    argon2::pw_hash(password)
   else
     NULL
 }
@@ -58,5 +58,5 @@ pwhash <- function(password)
 
 pwcheck <- function(pw)
 {
-  getPass::pw_check(getval(password), pw)
+  argon2::pw_check(getval(password), pw)
 }
